--- a/style.css
+++ b/style.css
@@ -5791,7 +5791,7 @@ aside#secondary .widget .widget-title:after,
 .footer-widget .widget_calendar td,
 .footer-widget .widget_calendar th,
 .footer-widget .widget_calendar caption {
-  color: #cccccc;
+  color: #000;
 }
 
 .widget_calendar tbody a {
@@ -8860,9 +8860,8 @@ section.error-404.not-found h1:before {
 /* ==================================*/
 
 .wrap-footer {
-  background-color: #000;
+  background-color: #fbfbfb;
   padding: 0;
-  box-shadow: 0 1px 3px #585858;
 }
 
 .wrap-top-footer {
@@ -8895,7 +8894,7 @@ section.error-404.not-found h1:before {
 }
 
 .footer-widget {
-  color: #cccccc;
+  color: #000;
   padding-bottom: 2px;
   padding-top: 20px;
   line-height: 1.5;
@@ -8921,7 +8920,7 @@ section.error-404.not-found h1:before {
 
 .footer-widget .widgettitle,
 .footer-widget .widget-title {
-  color: #9c9c9c;
+  color: #000;
   text-align: left;
   text-transform: uppercase;
   font-size: 16px;
@@ -8949,7 +8948,7 @@ h1.widget-title:after {
 }
 
 .footer-widget a {
-  color: #cccccc;
+  color: #000;
 }
 
 .site-footer {
@@ -10258,7 +10257,7 @@ section.callback-section {
   background: rgba(0, 0, 0, 0.45);
   color: #fff;
   text-align: center;
-  padding: 50px 0 40px;
+  padding: 50px 0 30px;
 }
 
 section .overlay-callback h1 {
