--- a/style.css
+++ b/style.css
@@ -7546,9 +7546,10 @@ button#mobile-menu-toggle-close {
   display: block;
 }
 
-.main-navigation li {
+
+/*.main-navigation li {
   position: relative;
-}
+}*/
 
 .main-navigation li:first-child {
   border-top: none;
@@ -7579,9 +7580,11 @@ button#mobile-menu-toggle-close {
   font-weight: 100;
 }
 
-.main-navigation .menu-item-has-children>a {
+
+/*.main-navigation .menu-item-has-children>a {
   position: relative;
 }
+*/
 
 .main-navigation .current_page_item>a:after,
 .main-navigation .current-menu-item>a:after,
@@ -7643,7 +7646,7 @@ button#mobile-menu-toggle-close {
 }
 
 .main-navigation.sec-main-navigation ul ul .menu-item-has-children>a {
-  position: relative;
+  /*position: relative;*/
   margin-right: 20px;
 }
 
@@ -7699,8 +7702,12 @@ button#mobile-menu-toggle-close {
   .main-navigation a,
   .main-navigation a:visited {
     color: #fff;
-    margin: 2px 0;
-    padding: 10px 10px;
+    font-size: 16px;
+    padding: 12px 18px;
+    width: 100%;
+    display: block;
+    text-transform: capitalize;
+    font-weight: 400;
   }
 }
 
@@ -7739,6 +7746,7 @@ button#mobile-menu-toggle-close {
   .sec-main-navigation.main-navigation ul {
     text-align: left;
     width: 100%;
+    /*display: inline-block !important;*/
   }
 }
 
@@ -9998,7 +10006,9 @@ section.section-wrapper h1 {
   text-transform: capitalize;
   position: relative;
   margin-top: 0;
+  color: rgba(0, 0, 0, 0.54);
 }
+
 
 /*section.section-wrapper h1:after {
   content: "";
@@ -10022,12 +10032,12 @@ section.section-wrapper h1 {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  transform: scale(1.2);
+  transition: all .5s;
 }
-
-.background-image-div.img-two {
-  background: url(./assets/images/2.jpg);
+section#portfolio:hover .background-image-div{
+   transform: scale(1);
 }
-
 .bg-overlay {
   padding: 100px;
   background: #00000069;
@@ -10036,6 +10046,7 @@ section.section-wrapper h1 {
 section#portfolio {
   display: flex;
   padding-top: 0;
+  overflow: hidden;
 }
 
 section#portfolio .bg-overlay {
@@ -10053,14 +10064,14 @@ section#portfolio .bg-overlay {
 .text-div.right {
   width: 50%;
   float: right;
-  color: #fff;
   padding: 30px 54px;
-  background: #fbfbfb
+  background: #fff;
+  z-index: 9;
 }
 
 section#portfolio h1,
 section#portfolio h2 {
-  color: #000;
+  color: rgba(0, 0, 0, 0.54);
 }
 
 p.portfolio-description {
@@ -10072,14 +10083,24 @@ p.portfolio-description {
 .listing h3 {
   font-size: 16px;
   color: #000;
+  position: relative;
+  padding-left: 24px;
+}
+
+.listing h3:before {
+  content: "\f0c9";
+  position: absolute;
+  left: 0;
+  font-family: fontAwesome;
+  opacity: .3;
 }
 
 .listing p {
   font-size: 14px;
   font-style: italic;
   color: #000;
+  padding-left: 24px;
 }
-
 
 .border-only.clearfix {
   border: 2px solid #fff;
@@ -10106,18 +10127,23 @@ p.portfolio-description {
 
 
 /* feature section */
+
 section#trade-hub-feature {
-    margin-bottom: 40px;
+  padding-bottom: 40px;
+  background: #fbfbfb;
 }
-section#trade-hub-feature h1{
+
+section#trade-hub-feature h1 {
   padding-bottom: 0;
 }
+
 .feature-content i {
   font-size: 24px;
   padding: 15px;
   transition: all .5s;
   margin-bottom: 10px;
   color: rgba(0, 0, 0, 0.54);
+  transform: scale(1.2);
 }
 
 .feature-content {
@@ -10128,8 +10154,13 @@ section#trade-hub-feature h1{
   position: relative;
   text-align: center;
 }
+
 .feature-content:hover {
-    box-shadow: 0 0 6px #bdbdbd;
+  box-shadow: 0 0 3px #bdbdbd;
+  background: #fff;
+}
+.feature-content:hover i{
+  transform: scale(1);
 }
 .feature-section h3 {
   font-weight: 600;
@@ -10144,6 +10175,7 @@ section#trade-hub-feature h1{
   margin-top: 0;
   display: inline-block;
 }
+
 .service-image {
   max-height: 294px;
   height: 100%;
@@ -10200,7 +10232,7 @@ section#trade-hub-feature h1{
   position: absolute;
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.58);
+  background: rgba(0, 0, 0, 0.78);
   content: "";
   top: 0;
   left: 0;
@@ -10224,40 +10256,37 @@ section#trade-hub-feature h1{
   #f1_container {
     height: 200px;
   }
-  .testimonials-content{
+  .testimonials-content {
     margin-bottom: 16px;
   }
 }
 
+
 /* about section */
-section.about-section{
+
+section.about-section {
   position: relative;
   padding-top: 40px;
   min-height: 400px;
   background: #fbfbfb;
-}
-section.about-section:after {
-  content: "";
-  position: absolute;
   background: url(./assets/images/3.jpg);
-  background-size: cover;
+  background-size: 50%;
   background-repeat: no-repeat;
-  background-position: center;
-  height: 100%;
-  width: 50%;
-  top: 0;
-  right: 0;
+  background-position: 100%;
 }
+
 a.know-more:after {
   content: "\f105";
   padding-left: 10px;
   font-family: fontAwesome;
 }
+
 @media screen and (max-width:767px) {
-  section.about-section:after{
+  section.about-section:after {
     display: none;
   }
 }
+
 
 /* callback section */
 
@@ -10269,22 +10298,18 @@ section.callback-section {
 }
 
 .overlay-callback {
-  background: rgb(251, 251, 251);
+  background: rgba(0, 0, 0, 0.35);
   color: #000;
   text-align: center;
   padding: 50px 0 30px;
 }
 
 section .overlay-callback h1 {
-  color: rgba(0, 0, 0, 0.54);
+  color: #fff;
   padding-bottom: 10px;
   text-transform: uppercase;
   text-align: left;
   margin: 0;
-}
-
-section .overlay-callback h1:after {
-  width: 0;
 }
 
 .overlay-callback p {
@@ -10296,6 +10321,7 @@ section .overlay-callback h1:after {
 
 section.testimonials-section.section-wrapper {
   padding-bottom: 40px;
+  background: #fbfbfb;
 }
 
 section.testimonials-section .slick-dots {
@@ -10456,6 +10482,13 @@ section#th-news {
   margin-bottom: 20px;
 }
 
+.news-image img{
+  transform: scale(1);
+  transition: all .5s;
+}
+.th-news-wrapper:hover img{
+  transform: scale(1.2);
+}
 .news-more-link {
   text-align: center;
   padding: 30px 0 9px;
@@ -10568,7 +10601,3 @@ body {
 
 
 /*=========================*/
-
-.home div#content {
-  display: none;
-}
